[package]
name = "anytls-rs"
version = "0.0.8"
edition = "2021"
authors = ["anytls-rs contributors"]
description = "A proxy protocol that attempts to mitigate the TLS in TLS fingerprinting problem"
license = "MIT"
repository = "https://github.com/anytls/anytls-rs"
keywords = ["proxy", "tls", "privacy", "networking"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "anytls-client"
path = "src/bin/client/main.rs"

[[bin]]
name = "anytls-server"
path = "src/bin/server/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.14"
x509-parser = "0.17"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
url = "2.0"
hex = "0.4"
base64 = "0.22"
parking_lot = "0.12"
dashmap = "5.0"
indexmap = "2.0"

bincode = "2.0"

[features]
depth = []