[package]
name = "anytls-rs"
version = "0.0.8"
edition = "2021"
authors = ["anytls-rs contributors"]
description = "A proxy protocol that attempts to mitigate the TLS in TLS fingerprinting problem"
license = "MIT"
repository = "https://github.com/anytls/anytls-rs"
keywords = ["proxy", "tls", "privacy", "networking"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "anytls-client"
path = "src/bin/client/main.rs"

[[bin]]
name = "anytls-server"
path = "src/bin/server/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.14"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
md5 = "0.7"
sha2 = "0.10"
rand = "0.8"
fastrand = "2.0"
bytes = "1.0"
bincode = "2.0"

[features]
depth = []

